src/styles/_theme.less
/* Layout size tokens */
html {
	--antd-wave-shadow-color: var(--coo-primary);
	--coo-layout-secondary-column-width: 15rem;
	--coo-left-sidebar-width: 15rem;
	--coo-secondary-sidebar-collapsed-width: 1.618rem;
	--coo-sidebar-collapsed-width: 5rem;
	--coo-right-sidebar-width: var(--right-column-width, 15rem);
}

a {
	color: var(--coo-fg-black);
	cursor: pointer;

	svg {
		fill: var(--coo-fg-black);
	}

	&:hover {
		color: var(--coo-primary);

		svg {
			fill: var(--coo-primary);
		}
	}
}

textarea::placeholder {
	color: var(--coo-fg-black) !important;
	opacity: .5;
}

::selection {
	background: var(--coo-primary);
}

.ant-input {
	&:hover {
		border-color: var(--coo-primary);
	}

	&:focus {
		border-color: var(--coo-primary);
		box-shadow: 0 0 0 .1rem rgba(var(--coo-rgb-primary), .2);
	}

	&-focused {
		border-color: var(--coo-primary);
		box-shadow: 0 0 0 .1rem rgba(var(--coo-rgb-primary), .2);
	}

	&-affix-wrapper {
		&:focus,
		&-focused {
			border-color: var(--coo-primary);
			box-shadow: 0 0 0 .1rem rgba(var(--coo-rgb-primary), .2);
		}

		&:not(.ant-input-affix-wrapper-disabled):hover {
			border-color: var(--coo-primary);
		}
	}
}

.ant-dropdown-menu {
	&-item {
		&:hover {
			background: rgba(var(--coo-rgb-primary-02), .2);
			color: var(--coo-primary);
		}
	}

	&-submenu {
		&-title {
			&:hover {
				background: rgba(var(--coo-rgb-primary-02), .2);
				color: var(--coo-primary);
			}
		}
	}
}

.m-button.ant-btn {
	border-radius: var(--coo-border-radius-small);

	&.ant-btn-circle {
		border-radius: var(--coo-border-radius-small);
	}

	&:focus {
		color: rgb(var(--coo-rgb-primary));
		border-color: rgb(var(--coo-rgb-primary));
	}
}

.ant-spin {
	.ant-spin-dot-item {
		color: var(--coo-primary);
		background: var(--coo-primary);
	}
}

.ant-switch {
	&-checked {
		background: var(--coo-primary);
	}

	&:focus {
		box-shadow: 0 0 0 2px rgba(var(--coo-rgb-primary), .2);
	}
}

.ant-pagination {
	&-item-active {
		border-color: var(--coo-primary);
	}

	a {
		color: var(--coo-primary);
	}

	&:hover {
		border-color: var(--coo-primary);
	}

	&-jump-next &-item-container &-item-link-icon {
		color: var(--coo-primary);
	}

	&-options-quick-jumper input {
		&:focus {
			border-color: var(--coo-primary);
			box-shadow: 0 0 0 2px rgba(var(--coo-rgb-primary), .2);
		}

		&:hover {
			border-color: var(--coo-primary);
		}
	}
}

.ant-picker {
	&-focused {
		border-color: var(--coo-primary);
		box-shadow: 0 0 0 .1rem rgba(var(--coo-rgb-primary), .2);
	}

	&-focused,
	&:hover {
		border-color: var(--coo-primary);
	}

	&-today-btn {
		color: var(--coo-primary);

		&:hover {
			color: var(--coo-primary);
		}

		&:active {
			color: var(--coo-primary);
		}
	}

	&-header-view button:hover {
		color: var(--coo-primary);
	}

	&-time-panel-column > li.ant-picker-time-panel-cell .ant-picker-time-panel-cell-inner:hover {
		background-color: var(--coo-primary-04);
	}

	&-cell-in-view.ant-picker-cell-range-start:not(.ant-picker-cell-range-start-single)::before,
	&-cell-in-view.ant-picker-cell-range-end:not(.ant-picker-cell-range-end-single)::before {
		background-color: var(--coo-primary-04);
	}
}

.ant-select {
	&:not(.ant-select-disabled):hover {
		.ant-select-selector {
			border-color: var(--coo-primary);
		}
	}
}

.ant-tabs-nav {
	.ant-tabs-tab-active {
		.ant-tabs-tab-btn {
			color: var(--coo-primary);
		}
	}

	.ant-tabs-tab {
		&:active,
		&:hover {
			color: var(--coo-primary);
		}
	}

	.ant-tabs-ink-bar {
		background: var(--coo-highlight-border);
	}
}

.ant-tabs {
	&-tab-btn:focus,
	&-tab-btn:active {
		color: var(--coo-primary);
	}
}

@rdb-header-height: 5rem;
@rdb-sidebar-trigger-height: 3rem;
@rdb-overall-top-height: 7rem;

@rdb-layout-right-column-visible-above: 992px;

@rdb-full: 100%;
@rdb-half: 50%;

